fix overlapping fab buttons

--- a/eFillApp/src/app/pages/google-maps/google-maps.component.scss
+++ b/eFillApp/src/app/pages/google-maps/google-maps.component.scss
@@ -25,4 +25,5 @@ ion-list {
   padding-left: 25px;
   padding-right: 25px;
   padding-top: 90px;
+  z-index: 1;
 }
